<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuatPesanan">


    <TextView
        android:id="@+id/staticItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="39dp"
        android:text="@string/text_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/staticCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_category"
        app:layout_constraintStart_toStartOf="@+id/staticItemName"
        app:layout_constraintTop_toBottomOf="@+id/staticItemName" />

    <TextView
        android:id="@+id/staticStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:text="@string/text_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticCategory" />

    <TextView
        android:id="@+id/staticPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:text="@string/text_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticStatus" />

    <TextView
        android:id="@+id/staticPayMethod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/text_payment"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/staticPrice" />

    <TextView
        android:id="@+id/textPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_period"
        app:layout_constraintEnd_toStartOf="@+id/installment_period"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/installment_period" />

    <TextView
        android:id="@+id/staticTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_total"
        app:layout_constraintStart_toStartOf="@+id/textPeriod"
        app:layout_constraintTop_toBottomOf="@+id/textPeriod" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/total_price"
        app:layout_constraintStart_toStartOf="@+id/total_price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <TextView
        android:id="@+id/item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/item_category"
        app:layout_constraintTop_toBottomOf="@+id/item_category" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/item_status"
        app:layout_constraintTop_toBottomOf="@+id/item_status" />

    <EditText
        android:id="@+id/installment_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/hitung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPeriod" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/installment_period"
        app:layout_constraintTop_toBottomOf="@+id/installment_period" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="77dp"
        app:layout_constraintBottom_toTopOf="@+id/total_price"
        app:layout_constraintStart_toStartOf="@+id/staticPayMethod"
        app:layout_constraintTop_toTopOf="@+id/staticPrice">

        <RadioButton
            android:id="@+id/paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Pay Now" />

        <RadioButton
            android:id="@+id/unpaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Pay Later" />

        <RadioButton
            android:id="@+id/installment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Installment" />
    </RadioGroup>

    <Button
        android:id="@+id/hitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Count"
        app:layout_constraintBottom_toTopOf="@+id/pesan"
        app:layout_constraintStart_toStartOf="@+id/pesan" />

    <Button
        android:id="@+id/pesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="Order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>